# MinecraftModsLocalizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/: main.py  mod.py  prepare.py  provider.py
tests/: conftest.py  pytest.ini
tests/unit/: test_mod.py
