[project]
name = "minecraftmodslocalizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nuitka>=2.6.8",
    "openai>=1.68.2",
    "pyinstaller>=6.12.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pyzipper>=0.3.6",
    "requests>=2.32.3",
    "tkeasygui>=1.0.21",
]
